--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     --main-text: #f9faf8;
     --secondary-text: #e5e7eb;
     --quote-bg: #e5e7eb;
+    --blue: #3882f6;
 }
 
 
@@ -13,13 +14,12 @@ body {
 }
 
 .container {
-    display: flex;
+    background-color: var(--hero-bg);
 }
 
 .hero-header {
     display: flex;
     justify-content: space-around;
-    background-color: var(--hero-bg);
     width: 100%;
     padding: 1em;
 }
@@ -35,6 +35,7 @@ body {
     text-decoration: none;
     color: var(--secondary-text);
     font-size: 20px;
+    font-weight: bold;
     border-radius: 5px;
     background-color: #9c949b;
     height: 25px;
@@ -50,5 +51,51 @@ body {
     width: 15%;
     height: auto;
     border-radius: 50%;
+}
 
+.hero-main {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2em;
+    padding: 2em;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 1000;
+    color: var(--main-text);
+}
+
+.hero-text {
+    width: 40%;
+}
+
+.hero-text > p {
+   color: var(--secondary-text);
+   font-size: 18px;
+}
+
+.signup {
+    background-color: var(--blue);
+    color: var(--main-text);
+    font-size: 20px;
+    font-weight: bold;
+    width: 20%;
+    height: 15%;
+    border-radius: 10px;
+    border: 2px solid var(--secondary-text);
+}
+
+.signup:hover{
+    cursor: pointer;
+    width: 22%;
+    height: 18%;
+    background-color: aqua;
+    transition: 1s;
+}
+
+.hero-img > img {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
 }
