--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 :root {
     --hero-bg: #1f2937;
     --main-text: #f9faf8;
@@ -100,12 +101,11 @@ h1 {
     border-radius: 15px;
 }
 
-.info {
+.info-text {
     background-color: var(--main-text);
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    
+    border: 1px solid transparent;
+    text-align: center;
+    margin-top: 5em;
 }
 
 h2 {
@@ -115,3 +115,81 @@ h2 {
 }
 
 
+.info {
+    background-color: var(--main-text);
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.info > div {
+    text-align: center;
+
+}
+
+.info > div > img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    border: 5px solid var(--blue);
+}
+
+.info > div > p {
+    color: #575957;
+}
+
+.quote-section {
+    background-color: var(--quote-bg);
+    border: 1px solid transparent;
+    padding-top: 2em;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 200;
+    color: var(--hero-bg);
+    padding: 0 4em 0 4em;
+}
+
+h3  {
+    font-size: 30px;
+    align-self: flex-end;
+    padding-right: 6em;
+    color: var(--hero-bg);
+}
+
+.content {
+    background-color: var(--main-text);
+    border: 1px solid transparent;
+    padding: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.calltoaction {
+    background-color: var(--blue);
+    width: 80%;
+    height: 8em;
+    border-radius: 10px;
+    padding: 0px 3em 0px 3em;
+}
+
+.button2 {
+    float: right;
+    width: 10%;
+    height: auto;
+}
+
+footer {
+    text-align: center;
+    padding: 1em;
+    background-color: var(--hero-bg);
+    color: var(--secondary-text);
+    font-family: arial;
+    font-size: 25px;
+    font-weight: lighter;
+}
